# trade-sim-v2

./: .gitignore  .rustfmt.toml  Cargo.toml  build.sh  devlog.md  maturin.sh
cli/: Cargo.toml
cli/src/: history.rs  lib.rs  main.rs  stdio_json.rs  tabular.rs
docs/: crash-load.md  devlog.md  events.md  look-ahead-agent.md  milestone-1.md  replay-crash.md  server.md  streaming-interface.md  week-9-12-23.md  workflow.md
input/: basic.json  last.json
output/: crash_report.json  last_run.json  last_run_tabular.json
output/tabular/: last_run.json
simpy/: Cargo.toml  README.md  pyproject.toml
simpy/notebooks/: crash_report.json  interactive.ipynb  load.ipynb  scenario_editor.ipynb  scratch.ipynb
simpy/python/: analysis.py  api.py  cli.py  hi.py  history.py  input_builder.py  replay_cache.py  scenarios.py  simrs_py.py  utils.py
simpy/python/scenarios/: builder.py  examples.py
simpy/python/services/: data.py  replays.py  scenarios.py
simpy/python/simrs/: __init__.py
simpy/src/: lib.rs
simpy/tests/: test_main.py
simulation/: Cargo.toml
simulation/src/: agent.rs  error.rs  history.rs  ids.rs  lib.rs  prelude.rs  state.rs
simulation/src/behaviors/: exhaustive.rs  greedy.rs  mod.rs
simulation/src/market/: exchanger.rs  good.rs  market_info.rs  mod.rs  money.rs  pricer.rs
simulation/tests/: serde.rs
visualization/: Cargo.toml
web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx  Router.tsx  main.tsx  request.ts
web/src/client/: index.ts
web/src/client/core/: request.ts
web/src/client/models/: AgentInfo.ts  Edge.ts  NetworkShape.ts  ReplayInfo.ts  Scenario_Input.ts  Scenario_Output.ts
web/src/client/services/: DataService.ts  DefaultService.ts  ReplayService.ts  ScenarioService.ts
web/src/components/: Fullscreen.tsx  HeaderFloating.tsx  MapModeSelector.tsx  PlaybackControls.tsx  PlaybackManager.tsx
web/src/graphics/: agents.ts  hooks.ts  network.ts  setup.ts  utils.ts
web/src/pages/: DoubleNavbar.module.css  Graph.page.tsx  Home.page.tsx
