[package]
name = "cli"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.5", features = ["derive"] }
log = "0.4.20"
# polars = { version = "0.28.0", features = ["json"] }
serde = { version = "1.0.160", features = ["derive", "rc"] }
serde_json = "1.0.96"
simplelog = "0.12.1"
simulation = { path = "../simulation" }
