[package]
name = "simpy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "simrs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18.3", features = ["extension-module", "eyre"] }
simulation = { path = "../simulation" }
cli = { path = "../cli" }
serde = { version = "1.0.160", features = ["derive", "rc"] }
serde_json = "1.0.96"
pythonize = "0.18.0"
pyo3-log = "0.8.3"
