
[tool.poetry]
name = "python-runner"
version = "0.1.0"
description = "Maturin Starter Project w/PyO3 & Poetry"
authors = ["JoeHowarth <josephehowarth@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
# python = "^3.7"
streamlit = "^1.22.0"
pandas = "^2.0.1"
numpy = "^1.24.3"
polars = "^0.17.12"
ipykernel = "^6.22.0"
altair = { git = "https://github.com/altair-viz/altair.git" }

[tool.poetry.dev-dependencies]
maturin = "^0.14.17"
pytest = "^7.1.2"
pytest-benchmark = "^3.4.1"

[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"


[project]
name = "simrs"
version = "0.1.0"
description = "Maturin Starter Project w/Poetry"
authors = [{ name = "kfields", email = "kurtisfields@gmail.com" }]
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
