[package]
name = "simulation"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
derive_more = "0.99.17"
log = "0.4.17"
petgraph = "0.6.3"
rpds = { version = "0.13.0", features = ["serde"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
ustr = { version = "0.9.0", features = ["serialization"] }
